...
                      context: context,
                      builder: (BuildContext context) => AlertDialog(
                        title: Text(context.loc.planEditDeleteDialogTitle),
                        content: Text(context.loc.planEditDeleteDialogText),
                        actions: <Widget>[
                          TextButton(
                            key: const Key('reject-delete-plan'),
                            onPressed: () => Navigator.pop(context, 'Cancel'),
                            child: Text(MaterialLocalizations.of(context)
                                .cancelButtonLabel),
                          ),
                          TextButton(
                            key: const Key('confirm-delete-plan'),
                            style: ButtonStyle(
                                foregroundColor: WidgetStatePropertyAll<Color>(
                                    Theme.of(context).colorScheme.error)),
                            onPressed: () {
                              planEdit.delete();
                              Navigator.popUntil(context,
...
