...
                          color: dividerColor,
                          shape: BoxShape.circle,
                        ),
                      ),
                      Expanded(
                          child: Divider(
                        key: Key(isCurrentDay ? 'current-day' : 'target-day'),
                        color: dividerColor,
                        thickness: 3,
                      ))
                    ])),
                dayCard,
              ],
...
